--- a/app.json
+++ b/app.json
@@ -20,7 +20,10 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-  "permissions": ["VIBRATE", "POST_NOTIFICATIONS"],
+      "permissions": [
+        "VIBRATE",
+        "POST_NOTIFICATIONS"
+      ],
       "package": "com.fallzone.game",
       "versionCode": 1
     },
@@ -42,7 +45,8 @@
           }
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-build-properties"
     ],
     "experiments": {
       "typedRoutes": true,
